--- a/templates/flight_page/flight_page_phase3.html
+++ b/templates/flight_page/flight_page_phase3.html
@@ -43,6 +43,11 @@
                     <p class="m-0 pb-3">1 December 2022 - 10 December 2022</p>
                 </div>
 
+                <!-- TITLE -->
+                <div class="row">
+                    <h2 class=" ms-3 text-white">Flights</h2>
+                </div>
+
                 <!-- CREATE NEW FLIGHT BUTTON -->
                 <div class="row justify-content-start mb-4 mt-3">
                     <div class="col-md-3 col-lg-2 d-flex justify-content-center">
