--- a/templates/lodging/lodging_phase3.html
+++ b/templates/lodging/lodging_phase3.html
@@ -46,6 +46,11 @@
                     <p class="m-0 pb-3">1 December 2022 - 10 December 2022</p>
                 </div>
 
+                <!-- TITLE -->
+                <div class="row">
+                    <h2 class=" ms-3 text-white">Lodging</h2>
+                </div>
+
                 <!-- CREATE NEW ACCOMMODATION BUTTON -->
                 <div class="row justify-content-start mb-4 mt-3">
                     <div class="col-md-3 col-lg-2 d-flex justify-content-center">
