--- a/templates/pages/edit_trip_name/edit_trip_name.html
+++ b/templates/pages/edit_trip_name/edit_trip_name.html
@@ -62,7 +62,7 @@
                         <!-- submit -->
                         <div class="row justify-content-center mt-4">
                             <div class="mt-3 text-center">
-                                <button type="button" @click="read_new_data()" class="btn btn-main mt-sm-0 mt-4">Update Details</button>
+                                <button type="button" @click="write_new_data()" class="btn btn-main mt-sm-0 mt-4">Update Details</button>
                             </div>
                         </div>
 
