added dark-grey color

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,10 +13,10 @@
 //NEW ===========================
 $primary:       #24A19D;
 $secondary:     #77e3b9;
-$success:       #37b9a1;
+$success:       #1ABA9C;
 $info:          #9ACFE6;
 $warning:       #FFC759;
-$danger:        #9D2D08;
+$danger:        #913038;
 $light:         #ffffff;
 $dark:          #0a4a48;
 
@@ -44,7 +44,8 @@ $btn-border-radius-lg:        2rem;
 $custom-colors: (
   "mild2": #cee1ea,
   "mild": #DFEEF5,
-  "bold": #58788C
+  "bold": #58788C,
+  "dark-grey": #2C3339,
 );
 
 $position-values: (
