--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -200,7 +200,7 @@
                     </div>
                     
                     <div class="col">
-                        <h1>Card Sample</h1>
+                        <h1>Activities</h1>
                         <!-- COPY FROM HERE -->
 
                         <div>
@@ -275,17 +275,6 @@
                     </div>
                     
                 <!-- ADD MAP DIV UNDER A COL HERE -->
-
-
-
-
-
-
-
-
-
-
-
                 </div>
             </div>
         </div>
