--- a/templates/template.css
+++ b/templates/template.css
@@ -171,6 +171,11 @@ div#animated-text{
     border: 0 !important;
 }
 
+.transparent{
+    background-color: rgba(255, 255, 255, 0) !important;
+    border: 0 !important;
+}
+
 .blurred-btn{
     backdrop-filter: blur(1px) !important;
     background-color: rgba(255, 255, 255, 0.6) !important;
