signup_email n login_email now

--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -74,7 +74,7 @@
                 <div class="mt-5">
                     <form>
                         <div class="form-floating text-light">
-                            <input type="email" class="form-control blurred-minor-gradient-login text-light" v-model="email" name="email" placeholder=" ">
+                            <input type="email" class="form-control blurred-minor-gradient-login text-light" v-model="login_email" name="login_email" placeholder=" ">
                             <label for="email"><i class="fa-solid fa-envelope fa-sm"></i> Email</label>
                         </div>
                         <br>
