--- a/templates/pages/signup_login pages/signup_page.html
+++ b/templates/pages/signup_login pages/signup_page.html
@@ -85,7 +85,7 @@
 
                         <!-- email -->
                         <div class="form-floating text-light col-12 ms-auto gx-1">
-                            <input type="email" class="form-control blurred-minor-gradient-login text-light" v-model="email" name="email" placeholder=" " id="email">
+                            <input type="email" class="form-control blurred-minor-gradient-login text-light" v-model="signup_email" name="signup_email" placeholder=" " id="email">
                             <label for="username"><i class="fa-solid fa-envelope fa-sm"></i> Email</label>
                         </div>
 
