--- a/templates/vacation_view/vacation_view.html
+++ b/templates/vacation_view/vacation_view.html
@@ -42,7 +42,7 @@
                         <div class="accordion-item blurred-minor-no-bd-filter" v-for="(date, index) of date_array">
                             <h2 class="accordion-header" :id="'panelsStayOpen-heading' +index">
                                 <button class="accordion-button blurred-minor-gradient-login text-white fw-semibold" type="button" data-bs-toggle="collapse" :data-bs-target="'#panelsStayOpen-collapse' +index" aria-expanded="true" :aria-controls="'panelsStayOpen-collapse' +index">
-                                Day {{index+1}}: {{date}}
+                                    <span class="fw-normal">Day {{index+1}}:</span>&nbsp;&nbsp;{{convert_date_to_readable(date)}}
                                 </button>
                             </h2>
                             <!-- {{flights_details[1].depart_datetime}} -->
@@ -61,7 +61,7 @@
     
                                                 <div class="col">
                                                     <h4 class="card-title mb-3"> {{flight.flight_no}} {{flight.airline}}</h4>
-                                                    <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-clock fa-xs"></i> {{flight.depart_datetime}}</p>
+                                                    <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-clock fa-xs"></i> {{convert_datetime_to_readable(flight.depart_datetime)}}</p>
                                                     <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-location-dot fa-xs"></i> {{flight.depart_country}}, {{flight.airport}} <i class="fa-solid fa-arrow-right fa-xs"></i> {{flight.arrive_country}}</p>
                                                     <p class="card-subtitle mb-2 text-muted">Gate {{flight.gate}}, Terminal {{flight.terminal}}</p>
                                                 </div>
@@ -83,7 +83,7 @@
                                                 <div class="col">
                                                     <!-- {{LODGiNG}} -->
                                                     <h4 class="card-title mb-3">{{lodge.accom_name}}</h4>
-                                                    <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-clock fa-xs"></i> Check-Out: {{lodge.checkout_datetime.split(" ")[1]}}</p>
+                                                    <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-clock fa-xs"></i> Check-Out: {{convert_datetime_to_readable_time(lodge.checkout_datetime)}}</p>
                                                     <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-location-dot fa-xs"></i> {{lodge.accom_address}}</p>
                                                 </div>
                                             </div>
@@ -102,7 +102,8 @@
                                                 <div class="col">
                                                     <!-- {{LODGiNG}} -->
                                                     <h4 class="card-title mb-3">{{lodge.accom_name}}</h4>
-                                                    <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-clock fa-xs"></i> Check-In: {{lodge.checkin_datetime.split(" ")[1]}}&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-clock fa-xs"></i> Check-Out: {{lodge.checkout_datetime}}</p>
+                                                    <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-clock fa-xs"></i> Check-In: {{convert_datetime_to_readable_time(lodge.checkin_datetime)}}</p>
+                                                    <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-clock fa-xs"></i> Check-Out: {{convert_datetime_to_readable(lodge.checkout_datetime)}}</p>
                                                     <p class="card-subtitle mb-2 text-muted"><i class="fa-solid fa-location-dot fa-xs"></i> {{lodge.accom_address}}</p>
                                                 </div>
                                             </div>
@@ -142,9 +143,14 @@
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
+    <!-- Flatpickr JS -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+    <!-- local js -->
     <script type="module" src="vacation_view.js"></script>
 
     <!-- sidebar js -->
     <script  src="../pages/sidebars.js"></script>
+
 </body>
 </html>
