--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -36,19 +36,19 @@
                 <sidebar-phase2></sidebar-phase2>
             </div>
 
-            <!-- TRIP INFO -->
-            <div class="trip-title-top-md d-none d-md-block" style="z-index: 1;">
-                <h6>Name of Trip (Trip to Seoul, Korea)</h6>
-                <p>1 December 2022 - 10 December 2022</p>
-            </div>
-
+            
             <!-- rest of site -->
-            <div class="col p-4" id="main">
+            <div class="col" id="main">
+                <!-- TRIP DETAILS -->
+                <div class="trip-title-top-md d-none d-md-block text-dark text-center">
+                    <h5>{{get_trip_name(trip_id)}} ({{trip_details.country}})</h5>
+                    <p>{{trip_details.duration}}</p>
+                </div>
 
                 <!-- TRIP DETAILS (SM) -->
                 <div class="row d-block d-md-none text-center blurred text-black">
-                    <h5 class="pt-3">Name of Trip (Trip to Seoul, Korea)</h5>
-                    <p class="m-0 pb-3">1 December 2022 - 10 December 2022</p>
+                    <h5 class="pt-3">{{get_trip_name(trip_id)}} ({{trip_details.country}})</h5>
+                    <p class="m-0 pb-3">{{trip_details.duration}}</p>
                 </div>
 
                 <div class="row">
@@ -200,7 +200,7 @@
                     </div>
                     
                     <div class="col">
-                        <h1>Activities</h1>
+                        <h1 class="my-4">Activities</h1>
                         <!-- COPY FROM HERE -->
 
                         <div>
