--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -36,17 +36,18 @@
            </div>
 
 
-        <!-- TRIP INFO -->
-            <div class="trip-title-top-md d-none d-md-block">
-                <h6>Name of Trip (Trip to Seoul, Korea)</h6>
-                <p>1 December 2022 - 10 December 2022</p>
+            <!-- TRIP DETAILS -->
+            <div class="trip-title-top-md d-none d-md-block text-dark text-center">
+                <h5>{{get_trip_name(trip_id)}} ({{trip_details.country}})</h5>
+                <p>{{trip_details.duration}}</p>
             </div>
+            
             <!-- rest of site -->
             <div class="col text-light" style="overflow: hidden;">
                 <!-- TRIP DETAILS (SM) -->
                 <div class="row d-block d-md-none text-center blurred text-black">
-                    <h5 class="pt-3">Name of Trip (Trip to Seoul, Korea)</h5>
-                    <p class="m-0 pb-3">1 December 2022 - 10 December 2022</p>
+                    <h5 class="pt-3">{{get_trip_name(trip_id)}} ({{trip_details.country}})</h5>
+                    <p class="m-0 pb-3">{{trip_details.duration}}</p>
                 </div>
 
                 <div class="row">
