--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -33,7 +33,7 @@
             <!-- sidebar -->
             <div id="nav" class="col-auto sidebar-css p-0 blurred-minor-2">
                  <!-- SIDEBAR  -->
-                <sidebar-phase2></sidebar-phase2>
+                <sidebar-phase2 :comp_username="username"></sidebar-phase2>
             </div>
 
             
