--- a/templates/pages/edit_trip_name/edit_trip_name.html
+++ b/templates/pages/edit_trip_name/edit_trip_name.html
@@ -25,7 +25,7 @@
         <div class="row sidebar-parent flex-nowrap">
             <div id="nav" class="col-auto sidebar-css">
                  <!-- SIDEBAR  -->
-                <sidebar-member-phase2></sidebar-member-phase2>
+                <sidebar-member-phase2 :comp_username="username"></sidebar-member-phase2>
             </div>
 
         <div class="col" id="edit_trip_details">
