--- a/templates/pages/sidebar-general.html
+++ b/templates/pages/sidebar-general.html
@@ -18,7 +18,7 @@
         <div class="row sidebar-parent flex-nowrap">
             <div id="nav" class="col-auto sidebar-css">
                  <!-- SIDEBAR  -->
-                <sidebar-general></sidebar-general>
+                <sidebar-general :comp_username="username"></sidebar-general>
             </div>
 
             <!-- rest of site -->
