--- a/templates/pages/signup_login pages/reset_password_email_page.html
+++ b/templates/pages/signup_login pages/reset_password_email_page.html
@@ -60,7 +60,7 @@
         <div class="col-sm-8 col-md-6 col-lg-5 px-4 blurred-minor-2" style="overflow-y: scroll; height: 100%;">
             <!-- LOGO GOES HERE -->
             <div class="mt-3">
-                LOGO
+                <img src="../../../Logo.png" width="120">
             </div>
 
             <h1 class="fw-bold text-primary mt-4">Send Reset Password Email</h1>
