--- a/templates/pages/signup_login pages/signup_page.html
+++ b/templates/pages/signup_login pages/signup_page.html
@@ -57,7 +57,7 @@
             <div class="col-sm-8 col-md-6 col-lg-5 px-4 blurred-minor-2 pb-5" style="overflow-y: scroll; height: 100%;">
                 <!-- LOGO GOES HERE -->
                 <div class="mt-3">
-                    LOGO
+                    <img src="../../../Logo.png" width="120">
                 </div>
 
                 <h1 class="fw-bold text-primary mt-4">Sign Up Now</h1>
