login and signup works now

--- a/templates/pages/signup_login pages/signup_page.html
+++ b/templates/pages/signup_login pages/signup_page.html
@@ -91,7 +91,7 @@
 
                         <!-- password -->
                         <div class="form-floating text-light col-12 ms-auto gx-1">
-                            <input type="password" class="form-control blurred-minor-gradient-login text-light" v-model="password" name="password" placeholder=" " id="pwd">
+                            <input type="password" class="form-control blurred-minor-gradient-login text-light" v-model="password" name="signup_password" placeholder=" " id="pwd">
                             <label for="password"><i class="fas fa-key fa-sm"></i> Password</label>
                             <small id="passwordHelpInline" class="text-muted">
                                 Must be 6-20 characters long
