--- a/templates/pages/sidebar-phase2.html
+++ b/templates/pages/sidebar-phase2.html
@@ -19,7 +19,7 @@
         <div class="row sidebar-parent flex-nowrap">
             <div id="nav" class="col-auto sidebar-css">
                 <!-- SIDEBAR  -->
-                <sidebar-phase2 :comp_username="username"></sidebar-phase2>
+                <sidebar-phase2 :comp_username="username" :comp_user_pic="user_pic"></sidebar-phase2>
             </div>
 
             <!-- rest of site -->
