--- a/templates/vacation_view/vacation_view.html
+++ b/templates/vacation_view/vacation_view.html
@@ -28,7 +28,7 @@
             <!-- sidebar -->
             <div id="nav" class="col-auto sidebar-css p-0 blurred-minor-2">
                 <!-- SIDEBAR  -->
-               <sidebar-phase4 :comp_username="username"></sidebar-phase4>
+               <sidebar-phase4 :comp_username="username" :comp_user_pic="user_pic"></sidebar-phase4>
            </div>
 
            <div id="main" class="col p-3">
