--- a/templates/flight_page/flight_page_phase2.html
+++ b/templates/flight_page/flight_page_phase2.html
@@ -32,7 +32,7 @@
         <div class="row sidebar-parent flex-nowrap">
             <div id="nav" class="col-auto sidebar-css blurred-minor-2 p-0">
                  <!-- SIDEBAR  -->
-                 <sidebar-phase2 :comp_username="username"></sidebar-phase2>
+                 <sidebar-phase2 :comp_username="username" :comp_user_pic="user_pic"></sidebar-phase2>
             </div>
 
             <!-- ALL OTHER CONTENT -->
