--- a/templates/lodging/lodging_phase2.html
+++ b/templates/lodging/lodging_phase2.html
@@ -35,7 +35,7 @@
         <div class="row sidebar-parent flex-nowrap" @click="update_local_vmodel()" @keydown="update_local_vmodel()">
             <div id="nav" class="col-auto sidebar-css p-0 blurred-minor-2">
                 <!-- SIDEBAR -->
-                <sidebar-phase2 :comp_username="username"></sidebar-phase2>
+                <sidebar-phase2 :comp_username="username" :comp_user_pic="user_pic"></sidebar-phase2>
             </div>
 
             <!-- ALL OTHER CONTENT -->
