homepage user deets

--- a/templates/home_page_adam_edit/trips-homepage.html
+++ b/templates/home_page_adam_edit/trips-homepage.html
@@ -17,7 +17,7 @@
 
     <div class="container-fluid">
       <div id="nav" class="row sticky-top">
-          <homepage-navbar></homepage-navbar>
+          <homepage-navbar :comp_username="username" :comp_user_pic="user_pic"></homepage-navbar>
       </div>
   
       <div class="row position-relative homepage-main-img">
