--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -22,7 +22,7 @@
 </head>
 <body class="bg-dark">
     <div id="nav" class="row sticky-top m-0">
-        <createtrip-navbar></createtrip-navbar>
+        <createtrip-navbar :comp_username="username" :comp_user_pic="user_pic"></createtrip-navbar>
     </div>
 
     <div>
