--- a/templates/create_page_adam_edit/create-trip.html
+++ b/templates/create_page_adam_edit/create-trip.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div id="nav" class="row sticky-top">
-        <createtrip-navbar></createtrip-navbar>
+        <createtrip-navbar :comp_username="username" :comp_user_pic="user_pic"></createtrip-navbar>
     </div>
 
     <div>
