--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -26,7 +26,7 @@
 <body class="bg-dark">
 
       <div id="nav" class="row sticky-top">
-          <homepage-navbar></homepage-navbar>
+          <homepage-navbar :comp_username="username" :comp_user_pic="user_pic"></homepage-navbar>
       </div>
 
       <!-- header -->
