can get username from localstorage

--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -79,7 +79,7 @@
                         </div>
                         <br>
                         <div class="form-floating text-light">
-                            <input type="password" class="form-control blurred-minor-gradient-login text-light" v-model="password" name="login_password" placeholder=" ">
+                            <input type="password" class="form-control blurred-minor-gradient-login text-light" v-model="login_password" name="login_password" placeholder=" ">
                             <label for="password"><i class="fas fa-key fa-sm"></i> Password</label>
                         </div>
                         <br>
