--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -29,13 +29,12 @@
 <!-- ACTIVITY CARD -->
 <body>
     <div class="container-fluid">
-        <div class="row sidebar-parent flex-nowrap">
+        <div class="row flex-nowrap">
             <!-- sidebar -->
             <div id="nav" class="col-auto sidebar-css p-0 blurred-minor-2">
                  <!-- SIDEBAR  -->
                 <sidebar-phase2 :comp_username="username" :comp_user_pic="user_pic"></sidebar-phase2>
             </div>
-
             
             <!-- rest of site -->
             <div class="col" id="main">
