--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -141,6 +141,10 @@
         </div>
       </div>
 
+    <div id="modals">
+      
+    </div>
+
     <script>
       function edit_trip(trip_ID, trip_start_date, trip_end_data, trip_destination) {
         console.log("button working")
