--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -66,13 +66,12 @@
 
                 
                 <div class="row">
-                    <div class="pt-5">
-
+                    <div>
                         <!-- Table  -->
                         <div class="content">
                             <div class="container">
                                 <div class="table-responsive custom-table-responsive">
-                                <table class="table custom-table">
+                                <table class="table custom-table mb-5">
                                     <thead>
                                         <!-- TABLE HEADER -->
                                         <tr>  
