--- a/templates/styling/styling.html
+++ b/templates/styling/styling.html
@@ -18,7 +18,7 @@
     <!-- main title -->
     <div class="container-fluid bg-light">
         <div class="row">
-            <h1 class="text-center my-3"><span class="text-primary">Wanderlog</span> Ripoff Style Guide</h1>
+            <h1 class="text-center my-3"><span class="text-primary">Kyoosh</span> Style Guide</h1>
         </div>
     </div>
 
