--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -173,7 +173,7 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <!-- Refer to my own external JS -->
-    <script src="../pages/homepageNavBar.js"></script>
+    <script type="module" src="../pages/homepageNavBar.js"></script>
 
     <!-- access firebase -->
     <script type="module" src="create_get_trip_CRUD_database.js"></script>
