--- a/templates/pages/sidebar-phase2.html
+++ b/templates/pages/sidebar-phase2.html
@@ -68,6 +68,6 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <!-- Refer to my own external JS -->
-    <script src="sidebars.js"></script>
+    <script type="module" src="sidebars.js"></script>
 </body>
 </html>
