--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -167,7 +167,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <!-- Refer to my own external JS -->
-    <script src="homepageNavBar.js"></script>
+    <script type="module" src="homepageNavBar.js"></script>
 
     <!-- js import -->
     <script type="module" src="./trips-homepage.js"></script>
