--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -179,7 +179,7 @@
     <script type="module" src="script.js"></script>
 
     <!-- Refer to sidebar JS -->
-    <script src="../pages/sidebars.js"></script>
+    <script type="module" src="../pages/sidebars.js"></script>
 
 </body>
 </html>
