--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -15,6 +15,9 @@
     <!-- Axios -->
     <script src='https://unpkg.com/axios/dist/axios.js'></script>
 
+     <!-- ICONS LIBRARY -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+
     <style>
         body{
             background-image: url("../../images/home_page/main_images/main_page_bg_1.jpg");
@@ -278,7 +281,11 @@
                 <!-- ADD MAP DIV UNDER A COL HERE -->
                 </div>
                 <div class="spending-bottom-md">
-                    <h5><button type="button" class="btn btn-main-fixed"  @click="update_user_votes()" data-bs-toggle="modal" data-bs-target="#saveModal">Save Votes</button></h5> 
+                                    <!-- Button trigger modal -->
+                                    <h5><button type="button" class="btn btn-main-mild-fixed my-3 mx-1" data-bs-toggle="modal" data-bs-target="#tutorial2Modal">
+                            <i class="fa-regular fa-circle-question"></i>
+                        </button>
+                    <button type="button" class="btn btn-main-fixed"  @click="update_user_votes()" data-bs-toggle="modal" data-bs-target="#saveModal">Save Votes</button></h5> 
                     <!-- onclick="location.href='https://kengboonang.github.io/WADBrothers.github.io/map_phase2.html'" -->
                 </div>
 
@@ -300,11 +307,38 @@
                         </div>
                         </div>
                     </div>
+
+                                <!-- Tutorial Modal -->
+                        <div class="modal fade" id="tutorial2Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-xl">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Plan your Itinerary!</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body mx-auto">
+                                    <p>1. Create an Activity, enter details and view in Map View</p>
+                                    <p>2. Go to list view and vote on activities. Save votes</p>
+                                    <p>3. Confirm activities to start planning Itinerary</p>
+                                    
+                                    <video loop muted autoplay style="width: 100%; height: auto;">
+                                        <source src="../../Phase2_tutorial_video.mp4">
+                                    </video>
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Close</button>
+                                
+                                </div>
+                            </div>
+                            </div>
+                        </div>
             </div>
         </div>
     </div>
-        
+    <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
 
+        <!-- Flatpickr JS -->
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="module" src="./script.js"></script>
