--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -32,7 +32,7 @@
         <div class="row flex-nowrap" >
             <div id="nav" class="col-auto sidebar-css p-0 blurred-minor-2">
                 <!-- SIDEBAR  -->
-               <select-activity-sidebar :comp_username="username" :comp_user_pic="user_pic"></select-activity-sidebar>
+               <select-activity-sidebar :comp_username="username" :comp_user_pic="user_pic" v-on:btnclick="sign_out"></select-activity-sidebar>
            </div>
 
 
