--- a/templates/pages/home-nav-sample.html
+++ b/templates/pages/home-nav-sample.html
@@ -17,7 +17,7 @@
 
     <!-- main nav bar at top of all pages -->
     <div id="nav">
-        <homepage-navbar :comp_username="username" :comp_user_pic="user_pic"></homepage-navbar>
+        <homepage-navbar :comp_username="username" :comp_user_pic="user_pic" v-on:btnclick="sign_out"></homepage-navbar>
     </div>
     
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
