--- a/templates/flight_page/flight_page_phase3.html
+++ b/templates/flight_page/flight_page_phase3.html
@@ -600,7 +600,7 @@
     <script src="flight_page.js" type="module"></script>
 
     <!-- Refer to sidebar JS -->
-    <script src="../pages/sidebars.js"></script>
+    <script type="module" src="../pages/sidebars.js"></script>
 
 </body>
 </body>
