--- a/templates/vacation_view/vacation_view.html
+++ b/templates/vacation_view/vacation_view.html
@@ -162,7 +162,7 @@
     <script type="module" src="vacation_view.js"></script>
 
     <!-- sidebar js -->
-    <script  src="../pages/sidebars.js"></script>
+    <script type="module" src="../pages/sidebars.js"></script>
 
 </body>
 </html>
