--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -36,7 +36,7 @@
             <!-- sidebar -->
             <div id="nav" class="col-auto sidebar-css p-0 blurred-minor-2">
                  <!-- SIDEBAR  -->
-                <sidebar-phase2 :comp_username="username"></sidebar-phase2>
+                <sidebar-phase2 :comp_username="username" :comp_user_pic="user_pic" v-on:btnclick="sign_out"></sidebar-phase2>
             </div>
 
             
