--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -20,7 +20,7 @@
             <div class="row sidebar-parent flex-nowrap">
                 <div id="nav" class="col-auto sidebar-css">
                      <!-- SIDEBAR  -->
-                    <sidebar-phase2 :comp_username="username" :comp_user_pic="user_pic"></sidebar-phase2>
+                    <sidebar-phase2 :comp_username="username" :comp_user_pic="user_pic" v-on:btnclick="sign_out"></sidebar-phase2>
                 </div>
     
                 <!-- rest of site -->
