--- a/templates/lodging/lodging_phase2.html
+++ b/templates/lodging/lodging_phase2.html
@@ -424,6 +424,6 @@
     <script src="lodging.js" type="module"></script>
 
     <!-- Refer to sidebar JS -->
-    <script src="../pages/sidebars.js"></script>
+    <script type="module" src="../pages/sidebars.js"></script>
 </body>
 </html>
