Added margin to acivity card view

--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -206,7 +206,7 @@
                     <div class="col-12 col-lg">
                         <!-- COPY FROM HERE -->
 
-                        <div style="overflow: scroll; height: 100vh;">
+                        <div style="overflow: scroll; height: 100vh;" class="mb-5">
                             <div class="card mb-3 blurred-minor-no-bd-filter" v-for="(location, index) in existing_locations">
                                 <!-- LOCATION/PLACE -->
                                 <div class="card-header blurred-minor-no-bd-filter">
