--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -335,6 +335,8 @@
             </div>
         </div>
     </div>
+
+
     <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
 
         <!-- Flatpickr JS -->
@@ -343,6 +345,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="module" src="./script.js"></script>
     <!-- sidebar js -->
-    <script  src="../pages/sidebars.js"></script>
+    <script type="module" src="../pages/sidebars.js"></script>
 </body>
 </html>
