Edited lodging 2 and 3 to wrap text

--- a/templates/lodging/lodging_phase2.html
+++ b/templates/lodging/lodging_phase2.html
@@ -185,7 +185,7 @@
                                 <div class="col-md-5 text-center text-md-start">
                                     <!-- accom title -->
                                     <div class="row">
-                                        <h2>{{e_accom_obj.accom_name}}</h2>
+                                        <h2 style="word-wrap: break-word;">{{e_accom_obj.accom_name}}</h2>
                                     </div>
                                     
                                     <!-- accom name & local -->
@@ -249,7 +249,7 @@
                         <form action="#">
                             <!-- title -->
                             <div class="row justify-content-center text-center">
-                                <h2><i class="fa-solid fa-hotel"></i> {{accom_name}}</h2>
+                                <h2 style="word-wrap: break-word;"><i class="fa-solid fa-hotel"></i> {{accom_name}}</h2>
                             </div>
                     
                             <!-- accom name & local -->
@@ -374,7 +374,7 @@
                                     <h1 class="modal-title fs-5" id="ModalLabel">Delete Lodging</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
-                                    <div class="modal-body">
+                                    <div class="modal-body" style="word-wrap: break-word;">
                                     Are you sure you want to delete <span class="fw-bold">{{e_accom_obj.accom_name}}</span>?
                                     </div>
                                     <div class="modal-footer">
